Opened 17 years ago
Closed 17 years ago
#1618 closed bug (fixed)
Gradient Type - Spelling errors
Reported by: | hai_cu_be | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Icon-O-Matic | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In this application, choose the menu "Style" then Add.
Change Style Type to "Gradient". Four options become available
Linear Radial Diamont Conic
I would suppose "Diamont" to be "Diamond".
Note:
See TracTickets
for help on using tickets.
It was hard to track down, but I think I fixed it in 22906. :-)