* fix spelling mistake diamont -> diamond (fixes #1618)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22906 a95241bf-73f2-0310-859d-f6bbb57e9c96